SERVER-29921 rewrite URI parser